# pilon-django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  pytest.ini.old  used-libs.md  webpack.config.js
Scripts/: activate  activate.bat  django-admin.py
donton/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Project.js  index.js
pilon/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
pilon/templates/: base.html
schedule/: admin.py  forms.py  periods.py  urls.py  utils.py  views.py
schedule/migrations/: 0001_initial.py  0003_auto_20160715_0028.py  0004_text_fields_not_null.py  0010_events_set_missing_calendar.py  0012_auto_20210415_2152.py
schedule/models/: calendars.py  events.py
schedule/templates/: base.html  fullcalendar_script.html
schedule/templatetags/: scheduletags.py
static/frontend/: index-bundle.js
static/polymorphic_tree/jqtree/test/: test.js
static/www/colors/: palette-1.css.map  palette-2.scss
static/www/custom/: datetime.scss  main.scss  markdownForm.js  palette-1.css  tasks.css
static/www/flatpickr/: flatpickr.css.map  flatpickr.scss
static/www/font/: font_source_sans_pro.css
static/www/forms/: journal-create.js
static/www/fullcalendar/: custom.scss
static/www/pilon-icons/: user-icons.scss
static/www/project/: calendar.js
static/www/sidebar/: journal.js  mobile-sidebar.js  sidebar.css
static/www/toastui/editor/: toastui-editor-all.min.js  toastui-editor.min.css
templates/: hello_webpack.html
templates/www/: user_settings_home.html
templates/www/accounts/: login.html  login_base.html
templates/www/base/: base+sidebar+title.html  base+sidebar.html  base+title.html  base.html  minimal.html
templates/www/dashboard/: dashboard_all_updates.html
templates/www/project/: project_base.html  project_create.html  project_home.html
templates/www/snippets/: bootstrap-table.html  comment.html  editor.html  footer.html  logo.html  navigation.html  pagination.html  people.html  subnavigation.html  title_subtitle.html  window_title.html
tests/: test_frontend.py  test_login_required.py  test_reversion.py  test_user_creation.py
tests/test_rest/: test_entity.py  test_entity_type.py  test_label.py  test_wiki_page.py
www/: 0002_populate.py  admin.py  apps.py  models.py  populate_db.py  urls.py  views.py
www/migrations/: 0001_initial.py  0002_auto_20210201_1241.py  0002_populate.py  0003_auto_20210209_1625.py  0003_auto_20210214_0058.py  0003_auto_20210214_1018.py  0003_auto_20210304_1416.py  0003_auto_20210322_2232.py  0003_auto_20210412_2132.py  0004_auto_20210215_1150.py  0004_auto_20210312_1937.py  0004_auto_20210404_0050.py  0004_auto_20210412_2132.py  0005_auto_20210303_2044.py  0005_auto_20210312_2032.py  0005_auto_20210404_0241.py  0006_auto_20210410_2041.py  0006_genre.py  0007_auto_20210410_2041.py  0008_auto_20210411_2221.py
www/migrations/custom/: 0002_populate.py
www/models/: entity.py  label.py  mixins.py  models.py  user.py
www/rest/: authentificate.py  calendar.py  middleware.py  project.py  serializers.py  urls.py  users.py  views.py
www/screens/: content.py  dashboard.py  default_template.py  login.py  people.py  project.py  settings.py  templates.py  urls.py  user_settings.py  view_by_id.py
www/screens/admin/: main.py
www/screens/dashboard/: main.py  urls.py
www/screens/project/: main.py  urls.py
www/screens/settings/: main.py
www/screens/snippets/: forms.py
www/static/www/: theme.css  theme.css.map  theme.scss
www/templates/todo/: base.html  home.html
www/templates/www/: admin.html  base+sidebar+title.html  base+sidebar.html  base+title.html  base.html  dashboard.html  default-with-sidebar.html  default-without-sidebar.html  default.html  endofbody.html  footer.html  login.html  minimal.html  navigation.html  people.html  simple.html  testnav.html  user_settings_home.html
www/views/: people.py  project_helper_views.py  templates.py  urls.py  user_settings.py  view_by_id.py  view_by_uuid.py
www/views/admin/: admin_views.py  urls.py  views.py
www/views/dashboard/: dashboard_views.py  urls.py  views.py
www/views/project/: project_views.py  urls.py  views.py
www/views/snippets/: forms.py
(+217 files in other folders)
