[tool.poetry]
name = "pilon"
version = "0.1.0"
description = ""
authors = [
    "Alexander Franke",
    "Jan Petermann"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
bleach = "^3.3.0"
django-utils = "^0.0.2"
django-extensions = "^3.1.1"
django-markdownfield = "^0.8.0"
django-mptt = "^0.11.0"
django-polymorphic-tree = "^1.5.1"
django-scheduler = "^0.9.3"
django-reversion = "^3.0.9"
django-reversion-compare = "^0.13.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
