[tool.poetry]
name = "pilon"
version = "0.1.0"
description = ""
authors = [
    "Alexander Franke",
    "Jan Petermann"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
bleach = "^3.3.0"
django-utils = "^0.0.2"
django-extensions = "^3.1.1"
django-markdownfield = "^0.8.0"
django-mptt = "^0.11.0"
django-polymorphic-tree = "^1.5.1"
django-reversion = "^3.0.9"
django-reversion-compare = "^0.13.1"
icalendar = "^4.0.7"
django-widget-tweaks = "^1.4.8"
django-rest-polymorphic = "^0.1.9"
httpie-django-auth = "^0.1.2"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
flake8 = "^3.9.0"
flakehell = "^0.9.0"
pep8-naming = "^0.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#addopts = "--verbose --log-level=INFO --cov openqlab --cov-report term-missing  --no-cov-on-fail --cov-report=html"
addopts = "-v -p no:warnings --cov=. --cov-report term-missing --no-cov-on-fail --ignore=tests/schedule --log-level=INFO"
DJANGO_SETTINGS_MODULE = "pilon.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.coverage]
    [tool.coverage.run]
    omit =[
        "*/schedule/*",
    ]
    [tool.coverage.report]
    fail_under = 35
    omit =[
        "*/schedule/*",
    ]

    [tool.coverage.html]
    directory = "htmlcov"


[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pep8-naming = ["+*"]
mccabe = ["+*"]
pylint = ["+*"]